# python-text-toolkit

./: .dockerignore  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
src/textkit/: cli.py
src/textkit/core/: __init__.py  normalize.py  tokenize.py
tests/: test_normalize.py  test_tokenize.py
