[project]
name = "textkit"
version = "0.1.0"
description = "A clean, modular text utilities package."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
textkit = "textkit.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]